.provarCaches/00D5f000005vwGkEAI/objects/rstk__pounno__c.object
<CustomObject>
    <description>pounno__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>TEXT( rstk__pounno_number__c )</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT( rstk__pounno_number__c ) + &quot;-&quot; +  rstk__pounno_propershipname__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pounno_hazclass__c</fullName>
        <inlineHelpText>The Hazard Class for this UN Number.  Must be a single digit numeric value with no more than one decimal.</inlineHelpText>
        <label>Hazard Class</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pounno_number__c</fullName>
        <inlineHelpText>A unique identifier for this UN Number</inlineHelpText>
        <label>UN Number</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__pounno_packgroup__c</fullName>
        <inlineHelpText>The Packing Group associated with this UN Number.  Valid values are I, II or III.</inlineHelpText>
        <label>Packing Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__pounno_propershipname__c</fullName>
        <inlineHelpText>The proper shipping name to be used, up to 50 characters in length.</inlineHelpText>
        <label>Proper Shipping Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pounno_subriskclass__c</fullName>
        <inlineHelpText>The Sub Risk Class for this UN Number.  Must be a single digit numeric value with no more than one decimal.</inlineHelpText>
        <label>Sub Risk Class</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>UN Number</label>
    <listViews>
        <fullName>rstk__RS_UN_Number</fullName>
        <columns>NAME</columns>
        <columns>rstk__pounno_number__c</columns>
        <columns>rstk__pounno_propershipname__c</columns>
        <columns>rstk__pounno_hazclass__c</columns>
        <columns>rstk__pounno_subriskclass__c</columns>
        <columns>rstk__pounno_packgroup__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>UN Number</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UN Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>